--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
-img {
-    width: 300px;
-}
+/*
+COLOR PALATE
+--charcoal: #2f4858ff;
+--cornflower-blue: #648de5ff;
+--international-orange-aerospace: #f05d23ff;
+--tiffany-blue: #2ec4b6ff;
+--maximum-blue-purple: #baa5fff;
+--rich-black-fora-29: #0d1b2aff;
+--oxford-blue: #1b263bff;
+--dazzled-blue: #415a77ff;
+--shadow-blue: #778da9ff;
+--platinum: #e0e1ddf;
+*/
+/*-----------------  Global Style  --------------------*/
+
+
+/*-----------------  Profile  --------------------*/
+
+
+/*-----------------  Projects  --------------------*/
+
+
+/*-----------------  Experience  --------------------*/
+
+
+/*-----------------  Education  --------------------*/
+
+
+/*-----------------  Contact  --------------------*/
