--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,11 @@ COLOR PALATE
 --platinum: #e0e1ddf;
 */
 /*-----------------  Global Style  --------------------*/
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 /*-----------------  Profile  --------------------*/
 
@@ -27,3 +31,96 @@ COLOR PALATE
 
 
 /*-----------------  Contact  --------------------*/
+.form {
+    text-align: center;
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*-----------------  Social  --------------------*/
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 2px solid black;
+    height: 50px;
+}
+
+small a {
+    color: black;
+}
+
+.social {
+    display: flex;
+    column-gap: 25px;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 16px;
+    color: #000;
+    border-radius: 50%;
+    outline: 2px solid #fff;
+    transition-property: outline-offset, outline-color, background-color;
+    transition-duration: 0.5s;
+}
+
+.icon:hover {
+    outline-offset: 4px
+}
+
+.icon:hover i {
+    animation: shake .5s;
+}
+
+.icon-mail:hover {
+    background-image: linear-gradient(wheat, #f5f5f5);
+    outline-color: #e7ce9f;
+    color: #9a7b59;
+}
+
+.icon-web:hover {
+    background-color: #62c9be;
+    outline-color: #62c9be;
+    color: #0c6962;
+}
+
+.icon-facebook:hover {
+    background-color: #4a8eb2;
+    outline-color: #4a8eb2;
+    color: #064365;
+}
+
+.icon-github:hover {
+    background-color: #24292e;
+    outline-color: #24292e;
+    color: rgba(239, 239, 239, 0.55);
+}
+
+.icon-linkedin:hover {
+    background-color: #00bbf2;
+    outline-color: #00bbf2;
+    color: #064365;
+}
+
+.icon-instagram:hover {
+    background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #f5f5f5 100%);
+    outline-color: #c54da2;
+    color: #7811e7;
+}
+
+.icon-twitter:hover {
+    background-color: #00bbf2;
+    outline-color: #00bbf2;
+    color: #064365;
+}
