--- a/css/style.css
+++ b/css/style.css
@@ -1,130 +1,276 @@
-/*
-COLOR PALATE
---charcoal: #2f4858ff;
---cornflower-blue: #648de5ff;
---international-orange-aerospace: #f05d23ff;
---tiffany-blue: #2ec4b6ff;
---maximum-blue-purple: #baa5fff;
---rich-black-fora-29: #0d1b2aff;
---oxford-blue: #1b263bff;
---dazzled-blue: #415a77ff;
---shadow-blue: #778da9ff;
---platinum: #e0e1ddf;
-*/
-/*-----------------  Global Style  --------------------*/
+/* <================= Google Font Link (Monserrat) =================> */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+/* <================= CSS Reset =================> */
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	color: white;
+	font-family: "Montserrat", sans-serif;
 }
 
-/*-----------------  Profile  --------------------*/
-
-
-/*-----------------  Projects  --------------------*/
-
-
-/*-----------------  Experience  --------------------*/
-
-
-/*-----------------  Education  --------------------*/
-
-
-/*-----------------  Contact  --------------------*/
-.form {
-    text-align: center;
-}
-.details{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body {
+	line-height: 1.7;
+	background: black;
+	min-height: 200vh;
 }
 
-/*-----------------  Social  --------------------*/
-.footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    border: 2px solid black;
-    height: 50px;
-    width: auto;
-    flex-flow: wrap;
-    row-gap: 12px;
-
+html {
+	scroll-behavior: smooth;
 }
 
-small a {
-    color: black;
+::selection {
+	color: white;
+	background-color: crimson;
 }
 
-.social {
-    display: flex;
-    column-gap: 15px;
+/* <================= Scroll Bar =================> */
+::-webkit-scrollbar {
+	width: 10px;
+	background: black;
 }
 
-.icon {
-    width: 30px;
-    height: 30px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 16px;
-    color: #000;
-    border-radius: 50%;
-    outline: 2px solid #fff;
-    transition-property: outline-offset, outline-color, background-color;
-    transition-duration: 0.5s;
+::-webkit-scrollbar-thumb {
+	background-color: #bfbfbf;
+	border-radius: 10px;
 }
 
-.icon:hover {
-    outline-offset: 4px
+/* <================= CSS Variables =================> */
+
+:root {
+	--font-large-color: white;
+	--font-small-color: #9f9f9f;
+	--main-color: #ff3636;
+	--bg-color-1: #131416;
+	--bg-color-2: #191a20;
 }
 
-.icon:hover i {
-    animation: shake .5s;
+h1 {
+	font-size: 90px;
+	color: var(--font-large-color);
 }
 
-.icon-mail:hover {
-    background-image: linear-gradient(wheat, #f5f5f5);
-    outline-color: #e7ce9f;
-    color: #9a7b59;
+h2 {
+	font-size: 46px;
+	color: var(--font-large-color);
 }
 
-.icon-web:hover {
-    background-color: #62c9be;
-    outline-color: #62c9be;
-    color: #0c6962;
+h3 {
+	font-size: 34px;
 }
 
-.icon-facebook:hover {
-    background-color: #4a8eb2;
-    outline-color: #4a8eb2;
-    color: #064365;
+h4 {
+	font-size: 30px;
 }
 
-.icon-github:hover {
-    background-color: #24292e;
-    outline-color: #24292e;
-    color: rgba(239, 239, 239, 0.55);
+h5 {
+	font-size: 20px;
 }
 
-.icon-linkedin:hover {
-    background-color: #00bbf2;
-    outline-color: #00bbf2;
-    color: #064365;
+p,
+span {
+	font-size: 17px;
+	color: var(--font-small-color);
 }
 
-.icon-instagram:hover {
-    background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #f5f5f5 100%);
-    outline-color: #c54da2;
-    color: #7811e7;
+/* <================= Reusable Classes =================> */
+
+.container {
+	padding: 30px;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
-.icon-twitter:hover {
-    background-color: #00bbf2;
-    outline-color: #00bbf2;
-    color: #064365;
+.btn {
+	background-color: transparent;
+	font-size: 17px;
+	outline: none;
+	border: 1px solid white;
+	border-radius: 5px;
+	padding: 10px 15px;
+	margin-top: 20px;
+	cursor: pointer;
 }
+
+.btn a {
+	text-decoration: none;
+}
+
+.btn:hover {
+	background-color: var(--main-color);
+	border-color: var(--main-color);
+}
+
+/* <================= Navbar =================> */
+
+#navbar {
+	height: 7rem;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: all 0.3s ease-in-out;
+	z-index: 9;
+}
+
+#navbar.fixed {
+	position: fixed;
+	height: 5rem;
+	background: #131416;
+	transition: all 0.3s ease-in-out;
+}
+
+#navbar .logo {
+	width: 5rem;
+	margin-left: 5rem;
+	z-index: 5;
+}
+
+#navbar .logo img {
+	width: 100%;
+}
+
+#navbar .nav-items {
+	display: flex;
+	list-style: none;
+	margin-left: 5rem;
+}
+
+#navbar .nav-items li {
+	margin: 0 1rem;
+}
+
+#navbar .nav-items li a {
+	text-decoration: none;
+	color: #c1c1c1;
+	font-size: 17px;
+	cursor: pointer;
+}
+
+#navbar .nav-items li a:hover {
+	color: white;
+}
+
+/* <================= Home =================> */
+
+#home {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+}
+
+#home .text-holder {
+	z-index: 2;
+}
+
+#home .text-holder h1 {
+	font-weight: 300;
+}
+
+#home .text-holder h1 span {
+	font-size: 90px;
+	color: var(--main-color);
+}
+
+#home .text-holder h3 {
+	font-weight: 300;
+}
+
+#home .text-holder h3 span {
+	font-size: 45px;
+	color: var(--main-color);
+}
+
+#home .text-holder .button {
+	display: block;
+	text-align: center;
+}
+
+#home .hero-img {
+	width: 30rem;
+	height: auto;
+	position: absolute;
+	z-index: 1;
+	right: 12rem;
+	bottom: -5em;
+	pointer-events: none;
+	opacity: 0.6;
+}
+
+.hero-img img {
+	width: 100%;
+}
+
+#home .social-icons {
+	position: absolute;
+	bottom: 1rem;
+	z-index: 2;
+	right: 5rem;
+}
+
+#home .social-icons a {
+	text-decoration: none;
+	width: 35px;
+	height: 35px;
+	/*text-align: center;*/
+	background-color: white;
+	border-radius: 50%;
+	/*line-height: 35px;*/
+	margin-right: 8px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	transition: 0.4s ease;
+	cursor: pointer;
+}
+
+#home .social-icons a i {
+	color: #1c1d24;
+}
+
+#home .social-icons a:hover {
+	transform: translateY(-10%);
+	background-color: var(--main-color);
+}
+
+#home .scroll-text {
+	position: absolute;
+	left: 5rem;
+	bottom: 2rem;
+	text-transform: uppercase;
+}
+
+#home .scroll-text a {
+	text-decoration: none;
+	display: inline-block;
+	font-size: 15px;
+	cursor: pointer;
+	transition: letter-spacing 0.5s ease;
+	text-align: left;
+}
+
+#home .scroll-text a:hover {
+	letter-spacing: 2px;
+	color: var(--main-color);
+}
+
+/* <================= About =================> */
+/* <================= Services =================> */
+
+/* <================= Resume =================> */
+/* <================= Portfolio =================> */
+/* <================= Reviews =================> */
+/* <================= Blog =================> */
+/* <================= Contact =================> */
+/* <================= Footer =================> */
+
+/* <================= Responsive =================> */
