--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html {
 
 ::selection {
 	color: white;
-	background-color: crimson;
+	background-color: #279bd9;
 }
 
 /* <================= Scroll Bar =================> */
@@ -41,7 +41,7 @@ html {
 :root {
 	--font-large-color: white;
 	--font-small-color: #9f9f9f;
-	--main-color: #ff3636;
+	--main-color: #279bd9;
 	--bg-color-1: #131416;
 	--bg-color-2: #191a20;
 }
@@ -103,6 +103,50 @@ span {
 .btn:hover {
 	background-color: var(--main-color);
 	border-color: var(--main-color);
+}
+
+.heading-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 100px;
+}
+
+.animate-bar {
+	width: 5rem;
+	height: 4px;
+	background-color: var(--main-color);
+	margin-top: 15px;
+	position: relative;
+}
+
+.animate-bar::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 5px;
+	height: 100%;
+	border-left: 5px solid white;
+	border-right: 5px solid white;
+	animation: animate 3s linear infinite;
+}
+
+@keyframes animate {
+	from {
+		left: 0%;
+	}
+	to {
+		left: 100%;
+	}
+}
+
+.sub-heading {
+	max-width: 40rem;
+	text-align: center;
+	margin-top: 30px;
+	padding: 0 1rem;
 }
 
 /* <================= Navbar =================> */
@@ -264,7 +308,122 @@ span {
 }
 
 /* <================= About =================> */
+
+#about {
+	background: var(--bg-color-1);
+	width: 100%;
+}
+
+#about .container {
+	padding: 100px 0;
+}
+
+.about-img {
+	width: 26rem;
+}
+
+.about-img img {
+	width: 100%;
+	border: 10px solid #232323;
+	box-shadow: 0 25px 50px -12px rgb(0 0 0 /25%);
+}
+
+#about .text-wrapper {
+	width: 35rem;
+	padding-left: 40px;
+}
+
+#about .text-wrapper h4 {
+	font-weight: 500;
+}
+
+#about .text-wrapper h5 {
+	margin-top: 15px;
+}
+
+#about .text-wrapper h5 span {
+	color: var(--main-color);
+}
+
+#about .text-wrapper p {
+	margin: 10px 0;
+	text-align: justify;
+}
+
+#about .about-list {
+	margin: 10px 0;
+}
+
+#about .about-list .list-item {
+	/*display: inline-flex;*/
+	width: 35rem;
+	margin-bottom: 1rem;
+}
+
+#about .about-list .list-item label {
+	font-size: 15px;
+	font-weight: 700;
+	width: 30rem;
+	padding-right: 1rem;
+	border-right: 1px solid #c1c1c1;
+}
+
+#about .about-list .list-item ul {
+	display: inline;
+	list-style: none;
+	padding-left: 5rem;
+}
+
+#about .about-list .list-item p {
+	display: inline;
+	margin: 0;
+	padding-left: 1rem;
+}
+
+#about .btn {
+	margin: 0;
+}
+
 /* <================= Services =================> */
+
+#services {
+	min-height: 100vh;
+	background-color: var(--bg-color-2);
+}
+
+#services .animate-bar::before {
+	border-color: var(--bg-color-2);
+}
+
+#services .heading,
+.sub-heading {
+	text-transform: uppercase;
+}
+
+.service-card .card-content {
+	width: 22rem;
+	height: 22rem;
+	padding: 55px 40px;
+	margin: 15px;
+	background-color: #131416;
+	box-shadow: 0 25px 50px -12px rgb(0 0 0 / 25%);
+	transition: all 0.3s ease-in;
+}
+
+.service-card .card-content:hover {
+	transform: translateY(-5%);
+	background-color: #1a1a1a;
+}
+
+.service-card .card-content i {
+	font-size: 30px;
+	color: var(--main-color);
+	margin-bottom: 10px;
+}
+
+.service-card .card-content h5 {
+	margin-bottom: 10px;
+}
 
 /* <================= Resume =================> */
 /* <================= Portfolio =================> */
