--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,6 @@ span {
 #navbar .nav-items {
 	display: flex;
 	list-style: none;
-	margin-left: 5rem;
 }
 
 #navbar .nav-items li {
@@ -824,6 +823,10 @@ form .forms-row {
 	gap: 1rem;
 }
 
+.forms-row .input-data {
+	width: 100%;
+}
+
 .form-row .input-data {
 	width: 50%;
 	display: block;
@@ -939,3 +942,251 @@ textarea:focus {
 }
 
 /* <================= Responsive =================> */
+/*Hamburger Lines*/
+#navbar .checkbox {
+	position: absolute;
+	width: 32px;
+	height: 26px;
+	right: 2.5rem;
+	opacity: 0;
+	display: none;
+}
+
+.hamburger-lines {
+	position: absolute;
+	width: 32px;
+	height: 26px;
+	right: 2.5rem;
+	pointer-events: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	z-index: 2;
+	display: none;
+}
+
+.hamburger-lines .line {
+	display: block;
+	height: 4px;
+	width: 100%;
+	border: 10px;
+	background-color: white;
+}
+
+.hamburger-lines .line1 {
+	transform-origin: 0% 0%;
+	transition: transform 0.4s ease-in-out;
+}
+
+.hamburger-lines .line2 {
+	transition: transform 0.2s ease-in-out;
+}
+
+.hamburger-lines .line3 {
+	transform-origin: 0% 100%;
+	transition: transform 0.4s ease-in-out;
+}
+
+input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+	transform: rotate(45deg);
+}
+
+input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+	transform: scale(0);
+}
+
+input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+	transform: rotate(-45deg);
+}
+
+/*Media Queries*/
+@media (max-width: 950px) {
+	#navbar .nav-items {
+		position: fixed;
+		flex-direction: column;
+		gap: 1rem;
+		top: 0;
+		left: -100%;
+		background-color: #131416;
+		width: 300px;
+		height: 100%;
+		padding-top: 8rem;
+		padding-left: 2rem;
+		transition: all 0.5s ease-in-out;
+	}
+
+	input[type="checkbox"]:checked ~ .nav-items {
+		left: 0 !important;
+	}
+
+	#navbar .checkbox {
+		display: block;
+	}
+
+	#home .text-holder {
+		text-align: center;
+	}
+
+	#home .text-holder h1,
+	#home .text-holder h1 span {
+		font-size: 3.5rem;
+	}
+
+	#home .text-holder h3,
+	#home .text-holder h3 span {
+		font-size: 2rem;
+	}
+
+	.hamburger-lines {
+		display: flex;
+	}
+
+	#navbar .logo {
+		margin-left: 1.5rem;
+	}
+
+	#about .container .about-img {
+		width: 20rem;
+	}
+}
+
+@media (max-width: 850px) {
+	#navbar .checkbox {
+		right: 2.5rem;
+	}
+
+	#home .text-holder {
+		text-align: center;
+	}
+
+	#home .text-holder h1,
+	#home .text-holder h1 span {
+		font-size: 3rem;
+	}
+
+	#home .text-holder h3,
+	#home .text-holder h3 span {
+		font-size: 1.5rem;
+	}
+
+	#home .scroll-text {
+		display: none;
+	}
+
+	#home .social-icons {
+		width: 100%;
+		text-align: center;
+		right: 0;
+	}
+
+	#about .container .text-wrapper {
+		padding-left: 120px;
+	}
+
+	#services .card-content {
+		width: 100%;
+		margin: 1rem 0;
+	}
+
+	#blogs .blog {
+		width: 100%;
+	}
+
+	.container {
+		padding: 0 80px;
+	}
+
+	#portfolio .gallery-item {
+		width: 50%;
+	}
+
+	#contact .contact-info,
+	#contact form {
+		width: 40rem;
+	}
+}
+
+@media (max-width: 700px) {
+	#portfolio .gallery-item {
+		padding: 15px 1.5rem;
+	}
+}
+
+@media (max-width: 600px) {
+	.container {
+		padding: 0 20px;
+	}
+
+	#home .hero-img {
+		display: none;
+	}
+
+	#about .container {
+		padding: 100px 20px;
+		justify-content: flex-start;
+	}
+
+	#about .container .text-wrapper {
+		padding: 0;
+		overflow: clip;
+	}
+
+	#services .heading-wrapper .heading {
+		text-align: center;
+	}
+
+	#skills .container {
+		padding: 15px 1.5rem;
+	}
+
+	#skills .container .progress-items {
+		width: 100%;
+	}
+
+	#skills .container .progress-items .progress-bar {
+		width: 100%;
+	}
+
+	#reviews {
+		padding: 0 20px;
+		height: auto;
+	}
+
+	.owl-carousel .item {
+		flex-direction: column;
+		text-align: center;
+	}
+
+	.owl-carousel .item .img-box {
+		width: 8rem;
+		margin-bottom: 20px;
+	}
+
+	.owl-carousel .title .text-holder {
+		padding: 0;
+	}
+
+	.owl-carousel .owl-dot {
+		padding: 0 !important;
+	}
+
+	#footer {
+		flex-direction: column;
+		height: 10rem;
+	}
+}
+
+@media (max-width: 467px) {
+	#portfolio .gallery-item {
+		width: 100%;
+	}
+
+	#contact .heading-wrapper .heading {
+		text-align: center;
+	}
+
+	#footer {
+		flex-direction: column;
+		height: 10rem;
+	}
+}
